Building plugins now copies them to the Plugins folder

--- a/filter/FilterProgramming/pom.xml
+++ b/filter/FilterProgramming/pom.xml
@@ -83,6 +83,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<!-- Move jar up -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<outputDirectory>../../Plugins/</outputDirectory>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
