--- a/datasource/Amptek/pom.xml
+++ b/datasource/Amptek/pom.xml
@@ -45,6 +45,17 @@
 				<configuration>
 				</configuration>
 			</plugin>
+			
+			<!-- Move jar up -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<outputDirectory>../../Plugins/</outputDirectory>
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 
