--- a/filter/FilterProgramming/pom.xml
+++ b/filter/FilterProgramming/pom.xml
@@ -27,9 +27,9 @@
 			<version>5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio.libs</groupId>
-			<artifactId>BoltCode</artifactId>
-			<version>1.0</version>
+			<groupId>net.sciencestudio</groupId>
+			<artifactId>bolt-code</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/de.sciss/syntaxpane -->
 		<dependency>
@@ -42,6 +42,11 @@
 			<groupId>com.ezware.oxbow</groupId>
 			<artifactId>TaskDialog</artifactId>
 			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sciencestudio</groupId>
+			<artifactId>autodialog-swing</artifactId>
+			<version>1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
