Added GenericHDF5 intended to make it easier to write quick little plugins for HDF5

--- a/datasource/pom.xml
+++ b/datasource/pom.xml
@@ -10,6 +10,8 @@
   <url>http://maven.apache.org</url>
   
   <modules>
+    <module>GenericHDF5</module>
+    <module>APSSector20</module>
     <module>Amptek</module>
     <module>ClsCdfml</module>
     <module>Inca</module>
