--- a/datasource/GenericHDF5/pom.xml
+++ b/datasource/GenericHDF5/pom.xml
@@ -32,6 +32,7 @@
 			<groupId>net.sciencestudio.peakaboo</groupId>
 			<artifactId>PeakabooSDK</artifactId>
 			<version>5.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -54,8 +55,6 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-
-
 		</plugins>
 	</build>
 
