--- a/datasource/Sigray/pom.xml
+++ b/datasource/Sigray/pom.xml
@@ -25,6 +25,7 @@
 			<groupId>net.sciencestudio.peakaboo</groupId>
 			<artifactId>PeakabooSDK</artifactId>
 			<version>5.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/ch.systemsx.cisd/sis-jhdf5-batteries_included -->
 		<dependency>
@@ -55,38 +56,28 @@
 				</configuration>
 			</plugin>
 			
-			<!--  Here we force the jar to build with the required library included -->
+			<!-- Build jar with dependencies bundled -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<outputDirectory>${project.basedir}/../../Plugins/</outputDirectory>
+					<finalName>${project.artifactId}-${project.version}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
 						<goals>
-							<goal>shade</goal>
+							<goal>single</goal>
 						</goals>
-						<configuration>
-							<artifactSet>
-								<includes>
-									<include>ch.systemsx.cisd:sis-jhdf5-batteries_included</include>
-								</includes>
-							</artifactSet>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			
-			<!-- Move jar up -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<outputDirectory>../../Plugins/</outputDirectory>
-				</configuration>
-			</plugin>
-			
+						
 		</plugins>
 	</build>
 
