--- a/filter/FilterProgramming/pom.xml
+++ b/filter/FilterProgramming/pom.xml
@@ -21,16 +21,6 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>net.sciencestudio.peakaboo</groupId>
-			<artifactId>PeakabooSDK</artifactId>
-			<version>5.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sciencestudio</groupId>
-			<artifactId>bolt-code</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/de.sciss/syntaxpane -->
 		<dependency>
 			<groupId>de.sciss</groupId>
@@ -44,9 +34,10 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio</groupId>
-			<artifactId>autodialog-swing</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<groupId>net.sciencestudio.peakaboo</groupId>
+			<artifactId>SwingUI</artifactId>
+			<version>5.0-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -62,41 +53,26 @@
 				</configuration>
 			</plugin>
 
-			<!-- Here we force the jar to build with the required library included -->
+			<!-- Build jar with dependencies bundled -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<outputDirectory>${project.basedir}/../../Plugins/</outputDirectory>
+					<finalName>${project.artifactId}-${project.version}</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
 				<executions>
 					<execution>
-						<phase>package</phase>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
 						<goals>
-							<goal>shade</goal>
+							<goal>single</goal>
 						</goals>
-						<configuration>
-							<artifactSet>
-								<includes>
-									<include>net.sciencestudio.libs:BoltCode</include>
-									<include>org.eclipse.jdt.core.compiler:ecj</include>
-<!-- 									<include>org.python:jython-standalone</include> -->
-<!-- 									<include>org.scijava:jython-shaded</include> -->
-									<include>de.sciss:syntaxpane</include>
-									<include>com.ezware.oxbow:TaskDialog</include>
-								</includes>
-							</artifactSet>
-						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			
-			<!-- Move jar up -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<outputDirectory>../../Plugins/</outputDirectory>
-				</configuration>
 			</plugin>
 			
 		</plugins>
