--- a/datasource/APSSector20/pom.xml
+++ b/datasource/APSSector20/pom.xml
@@ -29,9 +29,8 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sciencestudio.peakaboo</groupId>
-			<artifactId>PeakabooSDK</artifactId>
-			<version>5.0-SNAPSHOT</version>
-			<scope>provided</scope>
+			<artifactId>libpeakaboo</artifactId>
+			<version>5-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
