--- a/datasource/Vespers/pom.xml
+++ b/datasource/Vespers/pom.xml
@@ -23,8 +23,8 @@
 		</dependency>
 		<dependency>
 			<groupId>net.sciencestudio.peakaboo</groupId>
-			<artifactId>PeakabooSDK</artifactId>
-			<version>5.0-SNAPSHOT</version>
+			<artifactId>libpeakaboo</artifactId>
+			<version>5-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>localjars</groupId>
