--- a/filter/FilterProgramming/pom.xml
+++ b/filter/FilterProgramming/pom.xml
@@ -39,6 +39,11 @@
 			<version>5-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sciencestudio</groupId>
+			<artifactId>bolt-code</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
