Add commons logging dep to Vespers plugin, was it being included transitively in libpeakaboo until recently?

--- a/datasource/Vespers/pom.xml
+++ b/datasource/Vespers/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>ssutilities</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.0.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
