Add version for assembly plugin to prevent recursion issue when building

--- a/datasource/APSSector20/pom.xml
+++ b/datasource/APSSector20/pom.xml
@@ -50,6 +50,7 @@
 			<!-- Build jar with dependencies bundled -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
 					<outputDirectory>${project.basedir}/../../Plugins/</outputDirectory>
 					<finalName>${project.artifactId}-${project.version}</finalName>
