--- a/datasource/APSSector20/pom.xml
+++ b/datasource/APSSector20/pom.xml
@@ -31,6 +31,7 @@
 			<groupId>net.sciencestudio.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
