--- a/datasource/Inca/pom.xml
+++ b/datasource/Inca/pom.xml
@@ -25,6 +25,7 @@
 			<groupId>net.sciencestudio.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
