--- a/datasource/Sigray/pom.xml
+++ b/datasource/Sigray/pom.xml
@@ -25,6 +25,7 @@
 			<groupId>net.sciencestudio.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/ch.systemsx.cisd/sis-jhdf5-batteries_included -->
 		<dependency>
