--- a/datasource/APS8BM/pom.xml
+++ b/datasource/APS8BM/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>peakaboo.datasource.plugins</groupId>
+	<groupId>org.peakaboo.plugins</groupId>
 	<artifactId>APS8BM</artifactId>
 	<packaging>jar</packaging>
 
@@ -22,12 +22,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>peakaboo.datasource.plugins</groupId>
+			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>GenericHDF5</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio.peakaboo</groupId>
+			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
 			<scope>provided</scope>
@@ -73,5 +73,5 @@
 		</plugins>
 	</build>
 
-	<version>0.1</version>
+	<version>0.2</version>
 </project>
