--- a/datasource/APSSector20/pom.xml
+++ b/datasource/APSSector20/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>peakaboo.datasource.plugins</groupId>
+	<groupId>org.peakaboo.plugins</groupId>
 	<artifactId>APSSector20</artifactId>
 	<version>1.2</version>
 	<packaging>jar</packaging>
@@ -23,12 +23,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>peakaboo.datasource.plugins</groupId>
+			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>GenericHDF5</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio.peakaboo</groupId>
+			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
 			<scope>provided</scope>
