--- a/filter/FilterProgramming/pom.xml
+++ b/filter/FilterProgramming/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.sciencestudio.peakaboo.plugins</groupId>
+	<groupId>org.peakaboo.plugins</groupId>
 	<artifactId>FilterProgramming</artifactId>
 	<version>1.2</version>
 	<packaging>jar</packaging>
@@ -34,15 +34,15 @@
 			<version>1.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio.peakaboo</groupId>
+			<groupId>org.peakaboo</groupId>
 			<artifactId>SwingUI</artifactId>
 			<version>5-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.sciencestudio</groupId>
+			<groupId>org.peakaboo.framework</groupId>
 			<artifactId>bolt-code</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>2.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
