--- a/AllInOne/pom.xml
+++ b/AllInOne/pom.xml
@@ -36,12 +36,12 @@
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Sigray</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Amptek</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
@@ -51,23 +51,28 @@
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Inca</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Vespers</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>APSSector20</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
 			<version>5-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.peakaboo.plugins</groupId>
+			<artifactId>Raw</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 
