--- a/datasource/pom.xml
+++ b/datasource/pom.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.peakaboo.plugins</groupId>
-  <artifactId>datasource</artifactId>
-  <name>datasource</name>
-  <version>1.0</version>
-  <packaging>pom</packaging>
-  <url>http://maven.apache.org</url>
-  
-  <modules>
-    <module>GenericHDF5</module>
-    <module>APSSector20</module>
-    <module>APS8BM</module>
-    <module>Amptek</module>
-    <module>ClsCdfml</module>
-    <module>Inca</module>
-    <module>Sigray</module>
-    <module>Vespers</module>
-    <module>Raw</module>
-  </modules>
-  
-  <build>
+	<parent>
+		<groupId>org.peakaboo.plugins</groupId>
+		<artifactId>plugins</artifactId>
+		<version>5.4-SNAPSHOT</version>
+	</parent>
+	<artifactId>datasource</artifactId>
+	<name>datasource</name>
+	<packaging>pom</packaging>
+	<url>http://maven.apache.org</url>
+
+	<modules>
+		<module>GenericHDF5</module>
+		<module>APSSector20</module>
+		<module>APS8BM</module>
+		<module>Amptek</module>
+		<module>ClsCdfml</module>
+		<module>Inca</module>
+		<module>Sigray</module>
+		<module>Vespers</module>
+		<module>Raw</module>
+	</modules>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -42,6 +47,6 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  
+
+
 </project>
