--- a/AllInOne/pom.xml
+++ b/AllInOne/pom.xml
@@ -3,12 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.peakaboo</groupId>
-	<artifactId>AllInOne</artifactId>
-	<version>5-SNAPSHOT</version>
+	<parent>
+		<groupId>org.peakaboo.plugins</groupId>
+		<artifactId>plugins</artifactId>
+		<version>5.4-SNAPSHOT</version>
+	</parent>
+	<artifactId>all-in-one</artifactId>
 	<packaging>jar</packaging>
 
-	<name>AllInOne</name>
+	<name>all-in-one</name>
 	<url>http://maven.apache.org</url>
 
 	<!-- workaround for bug with maven timestamp property -->
@@ -26,53 +29,46 @@
 			<version>4.1</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Sigray</artifactId>
-			<version>1.3</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
-			<artifactId>Amptek</artifactId>
-			<version>1.3</version>
+			<artifactId>amptek</artifactId>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>ClsCdfml</artifactId>
-			<version>1.2</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Inca</artifactId>
-			<version>1.3</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Vespers</artifactId>
-			<version>1.3</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>APSSector20</artifactId>
-			<version>1.3</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
-			<version>5-SNAPSHOT</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Raw</artifactId>
-			<version>1.0</version>
+			<version>5.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
