--- a/datasource/GenericHDF5/pom.xml
+++ b/datasource/GenericHDF5/pom.xml
@@ -3,9 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.peakaboo.plugins</groupId>
+	<parent>
+		<groupId>org.peakaboo.plugins</groupId>
+		<artifactId>datasource</artifactId>
+		<version>5.4-SNAPSHOT</version>
+	</parent>
 	<artifactId>GenericHDF5</artifactId>
-	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>GenericHDF5</name>
@@ -31,7 +34,7 @@
 		<dependency>
 			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
-			<version>5-SNAPSHOT</version>
+			<version>5.4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
