--- a/datasource/Inca/pom.xml
+++ b/datasource/Inca/pom.xml
@@ -2,9 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.peakaboo.plugins</groupId>
+	<parent>
+		<groupId>org.peakaboo.plugins</groupId>
+		<artifactId>datasource</artifactId>
+		<version>5.4-SNAPSHOT</version>
+	</parent>
 	<artifactId>Inca</artifactId>
-	<version>1.3</version>
 	<packaging>jar</packaging>
 
 	<name>Inca</name>
@@ -24,7 +27,7 @@
 		<dependency>
 			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
-			<version>5-SNAPSHOT</version>
+			<version>5.4-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -39,12 +42,6 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
 				</configuration>
 			</plugin>
 			
