--- a/filter/pom.xml
+++ b/filter/pom.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>net.sciencestudio.peakaboo.plugins.filter</groupId>
-  <artifactId>filter</artifactId>
-  <name>filter</name>
-  <version>1.0</version>
-  <packaging>pom</packaging>
-  <url>http://maven.apache.org</url>
-  
-  <modules>
-  </modules>
-  
-  <build>
+	<parent>
+		<groupId>org.peakaboo.plugins</groupId>
+		<artifactId>plugins</artifactId>
+		<version>5.4-SNAPSHOT</version>
+	</parent>
+	<artifactId>filters</artifactId>
+	<name>filters</name>
+	<packaging>pom</packaging>
+	<url>http://maven.apache.org</url>
+
+	<modules>
+		<module>NewFilters</module>
+	</modules>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -33,6 +39,6 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  
+
+
 </project>
