--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.peakaboo.plugins</groupId>
-  <artifactId>plugins</artifactId>
-  <name>plugins</name>
-  <version>1.0</version>
-  <packaging>pom</packaging>
-  <url>http://maven.apache.org</url>
-  
-  <modules>
-    <module>filter</module>
-    <module>datasource</module>
-    <module>AllInOne</module>
-  </modules>
-  
-  <build>
+	<groupId>org.peakaboo.plugins</groupId>
+	<artifactId>plugins</artifactId>
+	<name>plugins</name>
+	<version>5.4-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<url>http://maven.apache.org</url>
+
+	<modules>
+		<module>filter</module>
+		<module>datasource</module>
+		<module>AllInOne</module>
+	</modules>
+
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -36,6 +38,6 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  
+
+
 </project>
