--- a/datasource/GenericHDF5/pom.xml
+++ b/datasource/GenericHDF5/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.peakaboo.plugins</groupId>
 		<artifactId>datasource</artifactId>
-		<version>5.4-SNAPSHOT</version>
+		<version>5.4</version>
 	</parent>
 	<artifactId>GenericHDF5</artifactId>
 	<packaging>jar</packaging>
