--- a/datasource/pom.xml
+++ b/datasource/pom.xml
@@ -17,6 +17,7 @@
 	<modules>
 		<module>GenericHDF5</module>
 		<module>GenericJHDF</module>
+		<module>UniversalHDF5</module>
 		<module>APSSector20</module>
 		<module>APSSector20BMLabView</module>
 		<module>APSSector11</module>
