--- a/AllInOne/pom.xml
+++ b/AllInOne/pom.xml
@@ -31,39 +31,24 @@
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
-			<artifactId>Sigray</artifactId>
-			<version>5.6-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.peakaboo.plugins</groupId>
-			<artifactId>amptek</artifactId>
-			<version>5.6-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>ClsCdfml</artifactId>
-			<version>5.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Inca</artifactId>
-			<version>5.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>Vespers</artifactId>
-			<version>5.6-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.peakaboo.plugins</groupId>
-			<artifactId>APSSector20</artifactId>
-			<version>5.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.peakaboo</groupId>
 			<artifactId>libpeakaboo</artifactId>
-			<version>5.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
@@ -88,8 +73,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			<plugin>
