--- a/datasource/CHESS/pom.xml
+++ b/datasource/CHESS/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>org.peakaboo.plugins</groupId>
 			<artifactId>GenericHDF5</artifactId>
-			<version>5.6-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -33,8 +33,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			
