--- a/datasource/Sigray/pom.xml
+++ b/datasource/Sigray/pom.xml
@@ -20,20 +20,18 @@
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/ch.systemsx.cisd/sis-jhdf5-batteries_included -->
 		<dependency>
-			<groupId>ch.systemsx.cisd</groupId>
-			<artifactId>sis-jhdf5-batteries_included</artifactId>
-			<version>1.0</version>
+			<groupId>cisd</groupId>
+			<artifactId>jhdf5</artifactId>
+			<version>19.04.1</version>
 		</dependency>
-
 	</dependencies>
 
 	<repositories>
 		<repository>
-			<id>kompics</id>
-			<url>http://kompics.sics.se/maven/repository/</url>
+			<id>scijava-public</id>
+			<url>https://maven.scijava.org/content/repositories/public/</url>
 		</repository>
 	</repositories>
-
 
 	<build>
 		<plugins>
@@ -42,8 +40,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>17</source>
+					<target>17</target>
 				</configuration>
 			</plugin>
 			
