--- a/datasource/Horiba5200/pom.xml
+++ b/datasource/Horiba5200/pom.xml
@@ -51,6 +51,23 @@
 				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>
+					    --add-opens java.base/java.lang=ALL-UNNAMED
+					    --add-opens java.base/java.math=ALL-UNNAMED
+					    --add-opens java.base/java.util=ALL-UNNAMED
+					    --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+					    --add-opens java.base/java.net=ALL-UNNAMED
+					    --add-opens java.base/java.text=ALL-UNNAMED
+					    --add-opens java.sql/java.sql=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
