--- a/datasource/APSSector20BMLabView/pom.xml
+++ b/datasource/APSSector20BMLabView/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.peakaboo.plugins</groupId>
 		<artifactId>datasource</artifactId>
-		<version>5.6-SNAPSHOT</version>
+		<version>6.0</version>
 	</parent>
 	<artifactId>APSSector20BMLabView</artifactId>
 	<packaging>jar</packaging>
