--- a/datasource/Vespers/pom.xml
+++ b/datasource/Vespers/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.peakaboo.plugins</groupId>
 		<artifactId>datasource</artifactId>
-		<version>5.6-SNAPSHOT</version>
+		<version>6.0</version>
 	</parent>
 	<artifactId>Vespers</artifactId>
 	<packaging>jar</packaging>
