--- a/datasource/pom.xml
+++ b/datasource/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.peakaboo.plugins</groupId>
 		<artifactId>plugins</artifactId>
-		<version>5.6-SNAPSHOT</version>
+		<version>6.0</version>
 	</parent>
 	<artifactId>datasource</artifactId>
 	<name>datasource</name>
