--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>org.peakaboo.plugins</groupId>
 	<artifactId>plugins</artifactId>
 	<name>plugins</name>
-	<version>5.6-SNAPSHOT</version>
+	<version>6.0</version>
 	<packaging>pom</packaging>
 	<url>http://maven.apache.org</url>
 
@@ -54,3 +54,4 @@
 
 
 </project>
+
