Update github actions so that libpeakaboo is always checked out from master, rather than trying to match the name of the branch.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,29 +13,24 @@ jobs:
 
     steps:
     
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up JDK
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: 21
-        distribution: 'corretto'
+        distribution: 'temurin'
         cache: maven
 
-
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         repository: nsherry4/Peakaboo
-        ref: ${{ github.ref }}
+        ref: master
         path: ./Peakaboo
 
     - name: Install base Peakaboo to Maven's local package store
       run: mvn -B install --file pom.xml
       working-directory: ./Peakaboo
-
-
-
-
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
